# Aeroric

./: .gitignore  AGENTS.md  PROJECT_REVIEW_AND_OPTIMIZATION_REPORT.md  PROMOTION_ZH.md  README.md  README_ZH.md  index.html  local_change.md  package.json  plan.md  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: checks.yml  release-desktop.yml
doc/: right-toolbar-shadcn-button-style-plan.md
docs/: code-optimization-and-component-consolidation-prompt.md  database-driver-support.md  dbx-database-exact-parity-implementation-prompt.md  dbx-database-exact-parity-review-prompt-2026-06-20.md  dbx-database-parity-handoff.md  dbx-database-parity-pause-summary.md  dbx-database-parity-prompt.md  project-overview.md  terminal-ime-regressions.md
knowledge/: README.md
knowledge/references/: aeroric-bug-report-workflow.md  agent-hooks-support.md  credential-storage.md  release-assets.md
src/: App.css  App.tsx  agents.ts  appProjectState.ts  appThemeState.ts  i18n.tsx  main.tsx  platform.ts  projectGroups.ts  projectOrder.ts  projectPersistence.ts  settings.ts  shortcuts.ts  syntaxHighlight.ts  taskPersistence.ts  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: aeroric-hook.mjs  agent_assist.rs  analytics.rs  app_settings.rs  conda.rs  config.rs  dap.rs  database.rs  diagnostics.rs  docker.rs  event_watcher.rs  formatter.rs  fs.rs  git.rs  hooks.rs  lib.rs  local_history.rs  lsp.rs  main.rs  notification.rs  ports.rs  pty.rs  remote_fs.rs  remote_git.rs  run_config.rs  search.rs  session.rs  sftp.rs  skills.rs  ssh.rs  storage.rs  tests.rs  usage.rs  usage_index.rs
src-tauri/src/dap/: protocol.rs
src-tauri/src/database/: connections.rs  dbx_state.rs  drivers.rs  grid.rs  import_export.rs  legacy_sqlite.rs  mod.rs  mongo.rs  query.rs  redis.rs  schema.rs  transfer.rs  types.rs
src-tauri/src/lsp/: protocol.rs
src-tauri/src/platform/: unix.rs
src/components/: AppSettingsDialog.tsx  AppSettingsEventHost.tsx  DockerIcon.tsx  ErrorBoundary.tsx  FileExplorer.tsx  FileViewer.tsx  GitChanges.tsx  GitDiffViewer.tsx  GitHistory.tsx  IconButton.tsx  NewTaskView.tsx  NotificationBell.tsx  ProjectAvatar.tsx  ProjectGroupDialog.tsx  ProjectPage.tsx  ProjectRail.tsx  RightToolbar.tsx  RunningView.tsx  SessionView.tsx  SettingsDialog.tsx  ShellTerminalPanel.tsx  SidebarFooterActions.tsx  TaskPanel.tsx  TerminalView.tsx  TimelineView.tsx  Toast.tsx  TodoTaskView.tsx  UsageDashboard.tsx  UsagePopover.tsx  WelcomePage.tsx  terminalCopyHelper.ts  terminalInputFix.ts  terminalShared.ts  useTextInputIMEFix.ts
src/hooks/: languageServerState.ts  projectPanelsState.ts  useAgentOptions.ts  useCancellableInvoke.ts  useDataGrid.ts  useDatabaseConnections.ts  useDatabaseQuery.ts  useDatabaseSchema.ts  useLanguageServer.ts  useMongoBrowser.ts  useNotifications.tsx  useProjectPanels.ts  useRedisBrowser.ts  useUsageStatistics.ts
src/i18n/: en.ts  zh.ts
src/lib/: databaseApi.ts  databaseUtils.ts  redisCommandSafety.ts  redisCommandSession.ts  redisKeyTree.ts
src/plugins/: ideToolRegistry.ts
(+285 files in other folders)
