[package]
name = "aeroric"
version = "1.3.2"
description = "Desktop task manager for AI coding agents"
authors = ["Aeroric"]
edition = "2021"
readme = "../README.md"
keywords = ["tauri", "desktop", "ai", "agent", "productivity"]
categories = ["gui", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aeroric_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["sync", "macros", "rt", "time", "process", "io-util"] }
once_cell = "1.19"
portable-pty = "0.8"
chrono = "0.4"
base64 = "0.22"
notify = "6"
toml = "0.8"
libc = "0.2"
parking_lot = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tungstenite = "0.24"
url = "2"
trash = "=5.2.6"
font-kit = "=0.14.3"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
dbx-core = { path = "../../dbx/crates/dbx-core", default-features = false }
tauri-plugin-clipboard-manager = "2"

[profile.dev]
debug = 0
